# yazi-frontend

./: .gitignore  CLAUDE.md  FUTURE.md  PRD.md  QUIRKS.md  RESEARCH.md  build-plugin.sh  install.sh  shell.qml  symmetria-fm.desktop  symmetria-fm.service  yazi-fm.service
.claude/memory/: MEMORY.md  feedback_anim_vs_canim.md  feedback_clear_qml_cache.md  feedback_qml_loader_quirks.md  feedback_qtobject_no_children.md  feedback_restart_service.md  project_observability_vision.md
.github/workflows/: ci.yml
components/: Anim.qml  CAnim.qml  ClippingRect.qml  FileIcon.qml  FileOpener.qml  MaterialIcon.qml  PreviewLoadingIndicator.qml  PreviewStateIndicator.qml  StateLayer.qml  StyledScrollBar.qml  StyledText.qml
config/: Config.qml  FileManagerConfig.qml  qmldir
host/standalone/: CMakeLists.txt  cli.cpp  main.cpp  main.qml  server.cpp  server.hpp
modules/filemanager/: ArchivePreview.qml  AudioPreview.qml  ContextMenuPopup.qml  CreateFilePopup.qml  DeleteConfirmPopup.qml  FallbackPreview.qml  FileList.qml  FileListItem.qml  FileManager.qml  FileManagerModule.qml  FlashLogic.js  FuzzyFinderPopup.qml  ImagePreview.qml  MillerColumns.qml  ParentPanel.qml  PathBar.qml  PreviewMetadata.qml  PreviewPanel.qml  RenamePopup.qml  Sidebar.qml  SpreadsheetPreview.qml  StatusBar.qml  TabBar.qml  TextPreview.qml  VideoPreview.qml  WhichKeyPopup.qml  WindowFactory.qml  ZoxidePopup.qml
modules/filemanager/handlers/: NormalModeHandler.js
plugin/: CMakeLists.txt
plugin/src/Symmetria/FileManager/Models/: CMakeLists.txt  archivepreviewmodel.cpp  archivepreviewmodel.hpp  audiowaveformmodel.cpp  audiowaveformmodel.hpp  filesystemmodel.cpp  filesystemmodel.hpp  filewatcher.cpp  fuzzyfinder.cpp  fuzzyfinder.hpp  icnsdecoder.cpp  icnsdecoder.hpp  previewimagehelper.cpp  previewimagehelper.hpp  shellrunner.cpp  shellrunner.hpp  spreadsheetpreviewmodel.cpp  spreadsheetpreviewmodel.hpp  syntaxhighlighthelper.cpp  syntaxhighlighthelper.hpp
plugin/tests/: ArchivePreviewModelTest.cpp  CMakeLists.txt  FileSystemModelTest.cpp  FuzzyFinderTest.cpp  ShellRunnerTest.cpp  SyntaxHighlightHelperTest.cpp
portal/: install-portal.sh  org.freedesktop.impl.portal.desktop.symmetria.service  symmetria.portal  symmetria_portal.py  xdg-desktop-portal-symmetria.service
qml/Symmetria/FileManager/UI/: qmldir
qml/Symmetria/FileManager/UI/components/: Anim.qml  CAnim.qml  FileIcon.qml  FileOpener.qml  MaterialIcon.qml  PreviewLoadingIndicator.qml  PreviewStateIndicator.qml  StateLayer.qml  StyledText.qml
qml/Symmetria/FileManager/UI/config/: FileManagerConfig.qml
qml/Symmetria/FileManager/UI/modules/filemanager/: ArchivePreview.qml  AudioPreview.qml  ContextMenuPopup.qml  CreateFilePopup.qml  DeleteConfirmPopup.qml  FallbackPreview.qml  FileList.qml  FileListItem.qml  FileManager.qml  FileTreeView.qml  FuzzyFinderPopup.qml  ImagePreview.qml  MillerColumns.qml  ParentPanel.qml  PathBar.qml  PreviewMetadata.qml  PreviewPanel.qml  RenamePopup.qml  SpreadsheetPreview.qml  StatusBar.qml  TabBar.qml  TextPreview.qml  VideoPreview.qml  WhichKeyPopup.qml  WindowFactory.qml  ZoxidePopup.qml
qml/Symmetria/FileManager/UI/modules/filemanager/handlers/: ChordHandler.js  FlashHandler.js  NormalModeHandler.js  SearchHandler.js  TreeFlashHandler.js
qml/Symmetria/FileManager/UI/services/: BookmarkService.qml  FileManagerService.qml  FmTheme.qml  Gitignore.qml  TabManager.qml  WindowState.qml
services/: BookmarkService.qml  FileManagerService.qml  Logger.qml  Paths.qml  TabManager.qml  Theme.qml  WindowState.qml  qmldir
